objects/Turbine_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Metrics</relationshipLabel>
        <relationshipName>Asset_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avg_kW_Output__c</fullName>
        <label>Evaporator Flow (gpm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Time_Reported__c</fullName>
        <label>Date/Time Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Condenser Flow (gpm)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Hours__c</fullName>
        <label>Lifetime Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Status_Indicator__c</fullName>
        <formula>IF( TEXT(Operational_Status__c) = &quot;Offline&quot;, IMAGE(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9V&amp;oid=00DHr000001CWQf&amp;lastMod=1552667210000&quot;, &quot;Red&quot;,50,50), 
IF ( TEXT(Operational_Status__c) = &quot;Online Active&quot;, IMAGE(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9W&amp;oid=00DHr000001CWQf&amp;lastMod=1552667189000&quot;, &quot;Yellow&quot;,50,50), 
IF ( TEXT(Operational_Status__c) = &quot;Online Idle&quot;, IMAGE(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9X&amp;oid=00DHr000001CWQf&amp;lastMod=1552667238000&quot;, &quot;Green&quot;,50,50), 
IMAGE(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9V&amp;oid=00DHr000001CWQf&amp;lastMod=1552667210000&quot;, &quot;Red&quot;,50,50))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Status_URL__c</fullName>
        <formula>IF( TEXT(Operational_Status__c) = &quot;Online Active&quot;, 
(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9W&amp;oid=00DHr000001CWQf&amp;lastMod=1552667189000&quot;), 

IF ( TEXT(Operational_Status__c) = &quot;Offline&quot;, 
(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9V&amp;oid=00DHr000001CWQf&amp;lastMod=1552667210000&quot;), 

IF ( TEXT(Operational_Status__c) = &quot;Online Idle&quot;,(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9X&amp;oid=00DHr000001CWQf&amp;lastMod=1552667238000&quot;), 
(&quot;https://carriernext--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9V&amp;oid=00DHr000001CWQf&amp;lastMod=1552667210000&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Status URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Status__c</fullName>
        <label>Operational Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>Online Active</fullName>
                </value>
                <value>
                    <fullName>Online Idle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RPM__c</fullName>
        <label>SEER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kW_Indicator_URL__c</fullName>
        <formula>IF( kW_Output_Current__c &lt; 500,(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9S&amp;oid=00DHr000001CWQe&amp;lastMod=1551197461000&quot;), 
IF ( kW_Output_Current__c &lt; 2000,(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9T&amp;oid=00DHr000001CWQe&amp;lastMod=1551197621000&quot;), 
IF ( kW_Output_Current__c &gt; 2001,(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9U&amp;oid=00DHr000001CWQe&amp;lastMod=1551197648000&quot;), (&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9S&amp;oid=00DHr000001CWQe&amp;lastMod=1551197461000&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>kW Indicator URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kW_Indicator__c</fullName>
        <formula>IF( kW_Output_Current__c &lt; 500, IMAGE(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9S&amp;oid=00DHr000001CWQe&amp;lastMod=1551197461000&quot;, &quot;Red&quot;,100,100), 
IF ( kW_Output_Current__c &lt; 2000, IMAGE(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9T&amp;oid=00DHr000001CWQe&amp;lastMod=1551197621000&quot;, &quot;Yellow&quot;,100,100), 
IF ( kW_Output_Current__c &gt; 2001, IMAGE(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9U&amp;oid=00DHr000001CWQe&amp;lastMod=1551197648000&quot;, &quot;Green&quot;,100,100), 
IMAGE(&quot;https://gerenew--c.documentforce.com/servlet/servlet.ImageServer?id=015Hr000003iK9S&amp;oid=00DHr000001CWQe&amp;lastMod=1551197461000&quot;, &quot;Red&quot;,100,100))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Output Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kW_Output_Current__c</fullName>
        <label>EER</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kW_Output_Daily_High__c</fullName>
        <label>kW Output (Daily High)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kW_Output_Daily_Low__c</fullName>
        <label>kW Output (Daily Low)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kW_Output_Monthly_Avg__c</fullName>
        <label>AVG Energy Draw (amps)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Asset Metric</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{0000000}</displayFormat>
        <label>Asset Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>